--- a/src/main/resources/templates/blank.html
+++ b/src/main/resources/templates/blank.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Country Management Page</title>
+  <title>Dashboard</title>
 
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -311,37 +311,13 @@
         <!-- sidebar menu start-->
         <ul class="sidebar-menu">
           <li class="active">
-            <a class="" th:href="@{/}">
+            <a class="" th:href="@{/index}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
           </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
-                          <i class="icon_document_alt"></i>
-                          <span>Vehicles</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-            <ul class="sub">
-              <li><a class="" th:href="@{/vehicles}">Vehicle Data</a></li>
-              <li><a class="" th:href="@{/vehicleMaintenances}">Maintenance</a></li>
-              <li><a class="" th:href="@{/vehicleMovements}">Movements</a></li>
-              <li><a class="" th:href="@{/vehicleHires}">Hires</a></li>
-            </ul>
-          </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
-                          <i class="icon_cogs"></i>
-                          <span>Parameters</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-            <ul class="sub">
-              <li><a class="" th:href="@{/vehicleMakes}">Vehicle Makes</a></li>
-              <li><a class="" th:href="@{/vehicleModels}">Vehicle Models</a></li>
-              <li><a class="" th:href="@{/vehicleTypes}">Vehicle Types</a></li>
-              <li><a class="" th:href="@{/vehicleStatuses}">Status Values</a></li>
-            </ul>
-          </li>
+        
+          
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="fa fa-users"></i>
@@ -349,48 +325,10 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
-              <li><a class="" th:href="@{/employees}">Employee</a></li>
-              <li><a class="" th:href="@{/clients}">Clients</a></li>
-              <li><a class="" th:href="@{/suppliers}">Suppliers</a></li>
-              <li><a class="" th:href="@{/contacts}">Contacts</a></li>
-              <li><a class="" th:href="@{/users}">Users</a></li>
+              <li><a class="" th:href="@{/asset}">Assets</a></li>
             </ul>
           </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
-                          <i class="icon_piechart"></i>
-                          <span>HR Settings</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-            <ul class="sub">
-              <li><a class="" th:href="@{/jobTitles}">Job Titles</a></li>
-              <li><a class="" th:href="@{/employeeTypes}">Employee Type</a></li>
-            </ul>
-          </li>
-           <li class="sub-menu">
-            <a href="javascript:;" class="">
-                          <i class="fa fa-usd"></i>
-                          <span>Accounts</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-            <ul class="sub">
-              <li><a class="" th:href="@{/invoices}">Invoices</a></li>
-              <li><a class="" th:href="@{/invoiceStatuses}">Invoice Status Values</a></li>
-            </ul>
-          </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
-                          <i class="icon_globe"></i>
-                          <span>Globals</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-            <ul class="sub">
-              <li><a class="" th:href="@{/countries}">Countries</a></li>
-              <li><a class="" th:href="@{/states}">States</a></li>
-              <li><a class="" th:href="@{/locations}">Locations</a></li>
-            </ul>
-          </li>
-     
+          
          <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_book"></i>
@@ -398,9 +336,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>                         
                       </a>
             <ul class="sub">
-              <li><a class="" th:href="@{/blank}">Vehicle Reports</a></li>
-              <li><a class="" th:href="@{/blank}">Employee Reports</a></li>
-              <li><a class="" th:href="@{/blank}">Accounts Reports</a></li>
+              <li><a class="" th:href="@{/assetreport}">Asset Report</a></li>
             </ul>                      
           </li>
 
@@ -424,7 +360,7 @@
           </div>
         </div>
         <!-- page start-->
-        <h1>List of Countries</h1>
+        <h1>Reports</h1>
         <!-- page end-->
       </section>
     </section>
